<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/salary_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_text_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/position"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinner_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/check_box_has_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hast_title" />

    <Button
        android:id="@+id/add_or_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add_button"
        android:text="Button"
        tools:text="@string/add" />

</LinearLayout>